// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entryToFASTAWithHeaders UniProtKB entry should handle reviewed entries 1`] = `
">sp|P21802|uniprot_id rec full Name OS=scientific name OX=9606 GN=some Gene PE=1 SV=5
SAPSQDFMRF"
`;

exports[`entryToFASTAWithHeaders UniProtKB entry should handle unreviewed entries 1`] = `
">tr|P21802|uniprot_id rec full Name OS=scientific name OX=9606 GN=some Gene PE=1 SV=5
SAPSQDFMRF"
`;

exports[`entryToFASTAWithHeaders fallback gracefully when lacking metadata should handle invalid entry types 1`] = `
">??|P21802|uniprot_id rec full Name OS=scientific name OX=9606 GN=some Gene PE=1 SV=5
SAPSQDFMRF"
`;

exports[`entryToFASTAWithHeaders fallback gracefully when lacking metadata should handle only sequence data 1`] = `
">
SAPSQDFMRF"
`;

exports[`entryToFASTAWithHeaders modification should handle subsets 1`] = `
">sp|P21802|uniprot_id|5-7 rec full Name OS=scientific name OX=9606 GN=some Gene PE=1 SV=5
QDF"
`;

exports[`entryToFASTAWithHeaders modification should handle variations, deletions 1`] = `
">sp|P21802|uniprot_id|4-6>- rec full Name OS=scientific name OX=9606 GN=some Gene PE=1 SV=5
SAPFMRF"
`;

exports[`entryToFASTAWithHeaders modification should handle variations, insertions 1`] = `
">sp|P21802|uniprot_id|4>SLMN rec full Name OS=scientific name OX=9606 GN=some Gene PE=1 SV=5
SAPSLMNQDF MRF"
`;

exports[`entryToFASTAWithHeaders modification should handle variations, replacements 1`] = `
">sp|P21802|uniprot_id|4-6>XXXXXX rec full Name OS=scientific name OX=9606 GN=some Gene PE=1 SV=5
SAPXXXXXXF MRF"
`;

exports[`entryToFASTAWithHeaders should handle UniParc entries 1`] = `
">UPI0000000001 status=true
MGAAASIQTT VNTLSERISS KLEQEANASA QTKCDIEIGN FYIRQNHGCN LTVKNMCSAD
ADAQLDAVLS AATETYSGLT PEQKAYVPAM FTAALNIQTS VNTVVRDFEN YVKQTCNSSA
VVDNKLKIQN VIIDECYGAP GSPTNLEFIN TGSSKGNCAI KALMQLTTKA TTQIAPKQVA
GTGVQFYMIV IGVIILAALF MYYAKRMLFT STNDKIKLIL ANKENVHWTT YMDTFFRTSP
MVIATTDMQN"
`;
